<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="ru">
    <string name="app_name">Аренда квартир</string>
    <string name="district">Район</string>
    <string name="search">Поиск</string>
    <string name="select">Выбрать</string>
    <string name="rooms_number">Количество комнат</string>
    <string name="price">Цена</string>
    <string name="total_area">Общая площадь</string>
    <string name="ads">Объявления</string>
    <string name="profile">Профиль</string>
    <string name="my_ads">Мои объявления</string>
    <string name="finished">Готовые</string>
    <string name="ads_view">Вид объявлений</string>
    <string name="my_profile">Мой профиль</string>
    <string name="phone_number">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="phone_number_example">9999999999</string>
    <string name="change_password">Изменить пароль</string>
    <string name="save_and_exit">Сохранить и выйти</string>
    <string name="continue_to">Продолжить</string>
    <string name="location">Расположение</string>
    <string name="about_apartment">О квартире</string>
    <string name="floor">Этаж</string>
    <string name="about_house">О доме</string>
    <string name="floors_number">Количество этажей</string>
    <string name="rules">Правила</string>
    <string name="possible_with_children">Можно с детьми</string>
    <string name="photo">Фотографии</string>
    <string name="exit">Выйти</string>
    <string name="attention">Внимание</string>
    <string name="lost_data_yes_no_message">Данные будут потеряны. Вы хотите продолжить?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="back">Назад</string>
    <string name="total_area_example">0.0</string>
    <string name="total_area_with_dimension">Общая площадь, м²</string>
    <string name="floors_in_house">Этажей в доме</string>
    <string name="sign_in">Войти</string>
    <string name="register">Регистрация</string>
    <string name="pricing_policy">Условия сделки</string>
    <string name="rent_per_month">Арендная плата, ₽ в месяц</string>
    <string name="floor_example">Номер этажа</string>
    <string-array name="district_names">
        <item><font fgcolor="@color/white">Ленинский</font></item>
        <item><font fgcolor="@color/white">Московский</font></item>
        <item><font fgcolor="@color/white">Октябрьский</font></item>
    </string-array>
    <string name="sign_up">Регистрация</string>
    <string name="add_ad">Добавить объявление</string>
    <string name="photo0">Фото 0</string>
    <string name="photo1">Фото 1</string>
    <string name="photo2">Фото 2</string>
    <string name="photo3">Фото 3</string>
    <string name="call">Позвонить</string>
    <string name="sorting">Сортировка</string>
    <string name="after_rooms">-комнат. кв. , </string>
    <string name="after_price">₽</string>
    <string name="after_price_per_square">₽ за м²</string>
    <string name="after_total_area"> м² , </string>
    <string name="after_floor"> / </string>
    <string name="after_floors_number"> эт.</string>
    <string name="settings">Настройки</string>
    <string name="about_us">О нас</string>
    <string name="mstu">МГТУ</string>
    <string name="sun_demon">Дёмин Даниил</string>
    <string name="about_user">О пользователе</string>
    <string name="author_ship">© SunDemon 2023</string>
    <string name="rooms_in_apartment">Комнат в квартире</string>
    <string name="message">Сообщение</string>
    <string name="dialog_message">Сообщение</string>
    <string name="undo_changes">Отменить изменения?</string>
    <string name="icon">Иконка</string>
    <string name="about_me">Дёмин Даниил\nстудент группы\nИУК4-22Б</string>
    <string name="about_developer">О разработчкике</string>
    <string name="bad_getting_image">Не удалось получить изображение</string>
    <string name="not_get_image">Изображение не получено</string>
    <string name="do_you_wont_exit_from_account">Вы хотите выйти из аккаунта?</string>
    <string name="district_small">район</string>
    <string name="edit">Изменить</string>
    <string name="lenin">Ленинский</string>
    <string name="reset">Сброс</string>
    <string name="districts">Районы</string>
    <string name="moscow">Московский</string>
    <string name="apply">Применить</string>
    <string name="october">Октябрьский</string>
    <string name="districts_filter">Фильтр\nрайонов</string>
    <string name="by_default">По умолчанию</string>
    <string name="by_price_ascending">По цене\n(вначале дешевле)</string>
    <string name="by_price_descending">По цене\n(вначале дороже)</string>
    <string name="delete_ad">Удалить объявление</string>
    <string name="message_delete_ad">Удалить объявление?</string>
    <string name="from">от</string>
    <string name="to">до</string>
    <string name="fields_not_full">Не все поля заполнены!</string>
    <string name="rooms_number_n">Количество\nкомнат</string>
    <string name="message_rooms_number_range">Фильтр должен входить в диапозон от 1 до 20 комнат</string>
    <string name="square_meters">м²</string>
    <string name="message_from_to_not_order">Значение \"от\" не может быть больше значения \"до\"</string>
    <string name="not_first">Не первый</string>
    <string name="not_last">Не последний</string>
    <string name="message_floor_range">Фильтр должен входить в диапозон от 1 до 20 этажа</string>
</resources>