<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_profile"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="#FF1A1A1A">
    <RelativeLayout
        android:id="@+id/top_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30sp"
        android:layout_marginHorizontal="30sp">


        <ImageButton android:id="@+id/about_developer"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_alignParentEnd="true"
            android:scaleType="fitCenter"
            android:src="@drawable/info"
            android:background="@android:color/transparent"
            android:contentDescription="@string/about_developer" />
        <Button android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="0sp"
            android:text="@string/exit"
            android:textColor="@drawable/button_exit_background"
            android:textSize="20sp" />


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/gray">


        <Button style="@style/ActivityButtonTheme"
            android:id="@+id/main"
            android:drawableTop="@drawable/search"
            android:textColor="@drawable/button_activity"
            android:text="@string/search"/>
        <Button style="@style/ActivityButtonTheme"
            android:id="@+id/my_ads"
            android:layout_centerHorizontal="true"
            android:textColor="@drawable/button_activity"
            android:text="@string/ads"
            android:drawableTop="@drawable/ads"/>
        <Button style="@style/ActivityButtonTheme"
            android:id="@+id/profile"
            android:layout_alignParentEnd="true"
            android:textColor="@drawable/button_activity_reverse"
            android:text="@string/profile"
            android:drawableTop="@drawable/profile_reverse"/>


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_panel"
        android:layout_above="@+id/activity_toolbar"
        android:layout_marginHorizontal="20sp"
        android:orientation="vertical">
        <TextView android:id="@+id/my_profile_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:text="@string/my_profile"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/my_profile_header"
            android:layout_above="@id/phone_header"
            android:layout_marginVertical="10sp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/profile_circle"
            android:contentDescription="@string/icon" />
        <View android:id="@+id/horizontal_line"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"/>
        <TextView android:id="@+id/phone_header"
            style="@style/HeaderTextViewTheme"
            android:layout_above="@id/phone"
            android:layout_centerHorizontal="true"
            android:textStyle="normal"
            android:text="@string/phone_number"/>
        <ImageView
            android:contentDescription="@string/phone_number"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:scaleType="center"
            android:layout_below="@+id/horizontal_line"
            android:src="@drawable/phone"
            android:background="@android:color/transparent"/>
        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_below="@id/horizontal_line"
            android:paddingHorizontal="20sp"
            android:layout_marginHorizontal="60sp"
            android:textColorHint="@color/light_gray"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:gravity="center_horizontal|center_vertical"
            android:background="@drawable/button"/>


        <Button android:id="@+id/change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone"
            android:layout_marginTop="30sp"
            android:layout_centerHorizontal="true"
            android:textColor="@drawable/button_transparent"
            android:textSize="20sp"
            android:text="@string/change_password"
            android:background="@android:color/transparent"/>


    </RelativeLayout>
</RelativeLayout>