<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginHorizontal="20sp">


        <Button android:id="@+id/back"
            android:layout_width="50sp"
            android:drawableStart="@drawable/arrow_to_left"
            style="@style/TransparentButtonTheme"/>
        <Button android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:textAlignment="textEnd"
            android:text="@string/reset"
            android:textSize="20sp"
            android:textColor="@drawable/button_transparent_reverse"
            style="@style/TransparentButtonTheme"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:textAlignment="center"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/districts_filter"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_marginBottom="7sp"
            android:textStyle="bold"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2sp"
        android:background="@color/dark_gray"
        tools:ignore="SmallSp" />


    <CheckBox android:id="@+id/lenin"
        style="@style/CheckBoxTheme"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginHorizontal="40sp"
        android:paddingEnd="30sp"
        android:gravity="center_horizontal|center_vertical"
        android:layout_marginVertical="2sp"
        android:text="@string/lenin"
        android:textSize="24sp"
        tools:ignore="RtlSymmetry" />
    <CheckBox android:id="@+id/moscow"
        style="@style/CheckBoxTheme"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginHorizontal="40sp"
        android:paddingEnd="30sp"
        android:gravity="center_horizontal|center_vertical"
        android:layout_marginVertical="2sp"
        android:text="@string/moscow"
        android:textSize="24sp"
        tools:ignore="RtlSymmetry" />
    <CheckBox android:id="@+id/october"
        style="@style/CheckBoxTheme"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginHorizontal="40sp"
        android:paddingEnd="30sp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/october"
        android:layout_marginVertical="2sp"
        android:textSize="24sp"
        tools:ignore="RtlSymmetry" />
    <Button android:id="@+id/apply"
        style="@style/MainButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50sp"
        android:textSize="28sp"
        android:text="@string/apply"/>


</LinearLayout>
