<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_ads"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdsActivity"
    android:background="#FF1A1A1A">
    <RelativeLayout
        android:id="@+id/top_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="30sp"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            android:text="@string/my_ads"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/gray">


        <Button android:id="@+id/main"
            style="@style/ActivityButtonTheme"
            android:drawableTop="@drawable/search"
            android:textColor="@drawable/button_activity"
            android:text="@string/search"/>
        <Button android:id="@+id/my_ads"
            style="@style/ActivityButtonTheme"
            android:layout_centerHorizontal="true"
            android:textColor="@drawable/button_activity_reverse"
            android:text="@string/ads"
            android:drawableTop="@drawable/ads_reverse"/>
        <Button android:id="@+id/profile"
            style="@style/ActivityButtonTheme"
            android:layout_alignParentEnd="true"
            android:textColor="@drawable/button_activity"
            android:text="@string/profile"
            android:drawableTop="@drawable/profile"/>


    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_panel"
        android:layout_above="@+id/activity_toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:text="@string/finished"/>
            <View style="@style/LineViewTheme"
                android:layout_height="5sp"
                tools:ignore="SmallSp" />


            <LinearLayout
                android:id="@+id/ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15sp"
                android:orientation="vertical">
            </LinearLayout>


            <View android:layout_width="match_parent"
                android:layout_height="100sp"/>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/activity_toolbar"
        android:layout_marginHorizontal="20sp"
        android:layout_marginVertical="30sp"
        android:background="@android:color/transparent">


        <Button style="@style/MainButtonTheme"
            android:id="@+id/create_ad"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="false"
            android:text="@string/add_ad"/>


    </RelativeLayout>
</RelativeLayout>